# mlx-profiler

./: CMakeLists.txt  CONTRIBUTING.md  EXPERIMENTS.md  PROFILER.md  README.md
docs/plans/: 2026-07-24-newcomer-onboarding.md
docs/specs/: 2026-07-22-public-mlx-profiler-fork-design.md  2026-07-24-newcomer-onboarding-design.md
mlx/: scheduler.h  transforms.cpp
mlx/backend/common/: CMakeLists.txt  dispatch_census.cpp  dispatch_census.h
mlx/backend/metal/: CMakeLists.txt  allocator.cpp  allocator.h  capture_replay.cpp  capture_replay.h  device.cpp  device.h  make_compiled_preamble.sh  metal.h  no_metal.cpp
mlx/backend/metal/clt_stub_includes/: metal_atomic  metal_common  metal_compute  metal_integer  metal_logging  metal_math  metal_simdgroup  metal_simdgroup_matrix  metal_stdlib
mlx/backend/metal/clt_stub_includes/MetalPerformancePrimitives/: MetalPerformancePrimitives.h
mlx/backend/metal/kernels/: CMakeLists.txt  write_metallib_manifest.cmake
python/src/: metal.cpp
tests/: CMakeLists.txt  clt_preamble_smoke.sh  dispatch_census_portability.cmake  dispatch_census_queue_smoke.cpp  dispatch_census_smoke.cpp  s2b_alpha_toy.py
